--- a/CC++notes/二维数组与二级指针.md
+++ b/CC++notes/二维数组与二级指针.md
@@ -10,5 +10,5 @@
 int a[2][2] = {0, 1, 2, 3};
 int **p = a;
 printf("%d", **p); // 报错，因为p指向a[0][0]，*p的值为0，那么**p就是试图访问地址为0的内存
-printf("%d", *p); // 输出0（a[0][0]的值
+printf("%d", *p); // 输出0（a[0][0]的值）
 ```
